# war-of-insects-simulator-cpp

./: CMakeLists.txt  README.md  index.html  main.cpp  run_simulation.sh
include/: ant_insect.h  colony.h  drone_ant_insect.h  drone_dytiscidae_insect.h  drone_insect.h  drone_thanasimus_insect.h  drone_wasp_insect.h  dytiscidae_insect.h  environment.h  group.h  insect.h  position.h  queen_ant_insect.h  queen_dytiscidae_insect.h  queen_insect.h  queen_thanasimus_insect.h  queen_wasp_insect.h  simulation.h  simulation_panel.h  soldier_ant_insect.h  soldier_dytiscidae_insect.h  soldier_insect.h  soldier_thanasimus_insect.h  soldier_wasp_insect.h  thanasimus_insect.h  wasp_insect.h  worker_ant_insect.h  worker_dytiscidae_insect.h  worker_insect.h  worker_thanasimus_insect.h  worker_wasp_insect.h
src/: ant_insect.cpp  colony.cpp  drone_ant_insect.cpp  drone_dytiscidae_insect.cpp  drone_insect.cpp  drone_thanasimus_insect.cpp  drone_wasp_insect.cpp  dytiscidae_insect.cpp  environment.cpp  group.cpp  insect.cpp  position.cpp  queen_ant_insect.cpp  queen_dytiscidae_insect.cpp  queen_insect.cpp  queen_thanasimus_insect.cpp  queen_wasp_insect.cpp  simulation.cpp  simulation_panel.cpp  soldier_ant_insect.cpp  soldier_dytiscidae_insect.cpp  soldier_insect.cpp  soldier_thanasimus_insect.cpp  soldier_wasp_insect.cpp  thanasimus_insect.cpp  wasp_insect.cpp  worker_ant_insect.cpp  worker_dytiscidae_insect.cpp  worker_insect.cpp  worker_thanasimus_insect.cpp  worker_wasp_insect.cpp
